# sidekick

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_websocket_client.py
sidekick/: __init__.py  cli.py  file_manager.py  server.py  watcher.py
